# gst-qt-poc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  cenc_poc.sh
src/: main.cpp
